:recycle: DEV-005: DDD Prototype implementation