@@ -1,21 +1,19 @@
 package com.functions.domain.model;
 
+import lombok.AllArgsConstructor;
+
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
+@AllArgsConstructor
 public class ContentModel {
     private final List<PartModel> contents;
-
-    public ContentModel(List<PartModel> contents) {
-        this.contents = contents;
-    }
 
     public List<Map<String, List<Map<String, String>>>> getContents() {
         return contents
             .stream()
             .map(PartModel::toMap)
-            .collect(Collectors.toList());
+            .toList();
     }
 
     public Map<String, List<Map<String, List<Map<String, String>>>>> toMap() {
