@@ -1,22 +1,20 @@
 package com.functions.domain.model;
 
 
+import lombok.AllArgsConstructor;
+
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
+@AllArgsConstructor
 public class PartModel {
     private final List<TextModel> parts;
-
-    public PartModel(List<TextModel> parts) {
-        this.parts = parts;
-    }
 
     public List<Map<String, String>> getParts() {
         return parts
             .stream()
             .map(TextModel::toMap)
-            .collect(Collectors.toList());
+            .toList();
     }
 
     public Map<String, List<Map<String, String>>> toMap() {
